--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             <code id="url">...</code>
         </p>
 
-        <video class="camera" autoplay></video>
+        <!--video class="camera" autoplay></video-->
+        <div id='videos'>
+             <video id='localVideo' autoplay muted></video>
+             <video id='remoteVideo' autoplay></video>
+       </div>
         <div class="controls">
             <canvas id="photo" style="width: 200px; height: 150px; border: 1px solid #ccc;"></canvas>
             <p> 
