--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
              <video id='localVideo' autoplay muted></video>
              <video id='remoteVideo' autoplay></video>
        </div>
+       <textarea id="dataChannelSend" disabled></textarea>
+       <textarea id="dataChannelReceive" disabled></textarea>
+
         <div class="controls">
             <canvas id="photo" style="width: 200px; height: 150px; border: 1px solid #ccc;"></canvas>
             <p> 
                 <button id="snap">snap</button>-then-<button id="send">send</button> 
                 <br> - or - <br>
+                <button id="text">text</button>
                 <button id="snapAndSend">snap & send</button>
             </p>
         </div>
