--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
              <video id='localVideo' autoplay muted></video>
              <video id='remoteVideo' autoplay></video>
        </div>
-       <textarea id="dataChannelSend" disabled></textarea>
-       <textarea id="dataChannelReceive" disabled></textarea>
+       <input type="text" id="textSend" placeholder="Enter Text Chat" disabled>
+       <div id="chat-container">        
+            <div class="chat-output"></div>
+       </div>
+
+       <!--textarea id="dataChannelReceive" disabled></textarea-->
 
         <div class="controls">
             <canvas id="photo" style="width: 200px; height: 150px; border: 1px solid #ccc;"></canvas>
