--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src=jinadded/firebase.js> </script>
         
 
-<script src=jinadded/adapter.min.js> </script>
+<script src=jinadded/adapter.js> </script>
 <script src=jinadded/jinRTCPeerConnection.js> </script>
 <script src=jinadded/jinconference.js> </script>
 
