--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <script src=jinadded/firebase.js> </script>
         
 
-<script src=jinadded/adapter.js> </script>
+<!--script src=jinadded/adapter.js> </script-->
+<script src=//cdn.temasys.com.sg/adapterjs/0.13.3/adapter.debug.js> </script>
 <script src=jinadded/jinRTCPeerConnection.js> </script>
 <script src=jinadded/jinconference.js> </script>
 
