--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--script src=//cdn.webrtc-experiment.com/gumadapter.js> </script-->
 <!--script src=js/adapter-latest.js> </script-->
 <!--script src=//cdn.temasys.com.sg/adapterjs/0.13.3/adapter.debug.js> </script-->
-<script src=C:/jinwork/adapter/bower_components/webrtc-adapter/adapter.js> </script>
+<script src=js/adapter-1.1.0.js> </script>
 <script src=jinadded/jinRTCPeerConnection.js> </script>
 <script src=jinadded/jinconference.js> </script>
 
