--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         video.setAttribute('width',videoWidth);
         videosContainer.insertBefore(video, videosContainer.firstChild);
        
-        getUserMedia({video: true,audio: true }, successCallback, errorCallback);
-            //getUserMedia({video: true ,audio: true }).then(successCallback).catch(errorCallback);
+        //getUserMedia({video: true,audio: true }, successCallback, errorCallback);
+        getUserMedia({video: true ,audio: true }).then(successCallback).catch(errorCallback);
         function successCallback(stream) {
             video.src =  window.URL.createObjectURL(stream);
             config.attachStream = stream;  
