--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </section>
         
 <script>   
+console.log("this index");
     var videoWidth = 240;
     var videoHeight = 240;            
     var config = {
