--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<script src=jinadded/firebase.js> </script>
+<script src=jinadded/firebase-2.4.2.js> </script>
         
 <!--script src=//cdn.webrtc-experiment.com/gumadapter.js> </script-->
 <!--script src=js/adapter-latest.js> </script-->
@@ -21,7 +21,6 @@
 </section>
         
 <script>   
-console.log("this index");
     var videoWidth = 240;
     var videoHeight = 240;            
     var config = {
