--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        
+     </head>
 <script src=jinadded/firebase-2.4.2.js> </script>
         
 <!--script src=//cdn.webrtc-experiment.com/gumadapter.js> </script-->
