--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         
      </head>
-<script src=jinadded/firebase-2.4.2.js> </script>
+<script src=jinadded/firebase.js> </script>
         
 <!--script src=//cdn.webrtc-experiment.com/gumadapter.js> </script-->
 <!--script src=js/adapter-latest.js> </script-->
